5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1675_2473.log
== TEST (2019-05-09 17:36:35) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		p = 
		print(p)
	else:
		print(e)
else:
	print("ano invalido")
-- ERROR:
File "XXXX", line 11
    p = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:36:51) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		p = e
		print(p)
	else:
		print(e)
else:
	print("ano invalido")
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:16:24) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:17:22) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:18:14) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:18:31) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:18:50) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:19:13) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- EXECUTION TIME:
0.146634
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:36:17) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- EXECUTION TIME:
0.236049
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:36:19) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- EXECUTION TIME:
0.149629
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:36:21) 
-- CODE:
ano = int(input("ano: "))

a = ano % 19
b = ano % 4
c = ano % 7
d = ((19 * a)+ 24)% 30
e = ((2 * b)+(4 * c)+(6 * d) + 5)% 7

if(ano>1900)and(ano<2099):
	if(ano == 1954)or(ano == 1981)or(ano == 2049)or(ano == 2076):
		if(d + e >= 17):
			x = (15 + d + e)% 31
			print(x,"-",4,"-",ano)
		else:
			x = 15 + d + e
			print(x,"-",3,"-",ano)
		print(p)
	else:
		if(d + e >= 10):
			x = (22 + d + e)%31
			print(x,"-",4,"-",ano)
		else:
			x = 22 + d + e
			print(x,"-",3,"-",ano)
else:
	print("ano invalido")
-- EXECUTION TIME:
0.122253
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
